--- a/index.html
+++ b/index.html
@@ -3,20 +3,74 @@
 <head>
 	<title>Snow Fangs Art Hub</title>
 	<!--Hey! Dont snoop at my code-->
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Mina:400,700" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container" align="center">
-		<br><br><br>
-		<img src="https://i.imgur.com/Y2g7jLR.jpg">
-		<h1>Under Works</h1>
-		<hr width="250px">
-		<p>Hang in there while I learn how to do this right</p>	
-		<button onclick="goBack()">Go Back</button>
-		<script>
-			function goBack() {
-					window.history.back();
-			}
-		</script>
+
+	<div class="container">
+		
+		<div class="row heading">
+			<div class="col-md-12">
+				<h1>Snow Fangs Art Hub</h1>
+				<p>Please note this site is under construction, but my Commission Sheets are listed here for the time being. In the future the site will have funcionality which will allow you to start commission orders on the site but for now you will need to email me directly if you are interested in ordering a commission.</p>
+				<h2>SnowFangs.Digital@Gmail.com</h2> 
+			</div>
+		</div>
+
+		<div class="row contents">
+			<div class="col-md-4">
+				<!-- Headshots -->
+				<hr>
+				<img src="https://i.imgur.com/BBpZCvG.jpg">
+				<div class="row"><a href="https://i.imgur.com/BBpZCvG.jpg" target="_blank"><div>Enlarge</div></a></div>
+			</div>
+			<div class="col-md-4">
+				<!-- Half Body -->
+				<hr>
+				<img src="https://i.imgur.com/IIMV5tJ.jpg">
+				<div class="row"><a href="https://i.imgur.com/IIMV5tJ.jpg" target="_blank"><div>Enlarge</div></a></div>
+			</div>
+			<div class="col-md-4">
+				<!-- Full Body -->
+				<hr>
+				<img src="https://i.imgur.com/pO2qYjp.jpg">
+				<div class="row"><a href="https://i.imgur.com/pO2qYjp.jpg" target="_blank"><div>Enlarge</div></a></div>
+			</div>
+		</div>
+
+		<hr>
+
+		<div class="row notice">
+			<div class="col-md-6 left">
+				<h2>Need More Examples?</h2>
+				<ul>
+				<li><a href="https://snow-fangs.deviantart.com/" target="_blank">DeviantArt</a></li>
+				<li><a href="http://www.furaffinity.net/user/snowfangs/" target="_blank">Furaffinity</a></li>
+				</ul>
+			</div>
+			<div class="col-md-6 right">
+				<img src="https://i.imgur.com/Y2g7jLR.jpg">
+				<h2>Under Works</h2>
+				<p>Some images<br>still need to<br>be added.</p>	
+			</div>
+		</div>
+
+		<div class="row footer">
+			<div class="col-md-12">
+				<p>
+				Copyright ©
+				<script type="text/javascript">
+				var d = new Date()
+				document.write(d.getFullYear())
+				</script>
+				Snow Fangs Digital
+				</p>
+			</div>
+		</div>
+
 	</div>
+
 </body>
 </html>
