--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
+<!-- TABLE OF CONTENTS -->
+<!--	
+			Title
+			Container
+
+			Heading
+			Sheets
+			Notice
+			Footer
+ -->
 <html>
 <head>
 	<title>Snow Fangs Art Hub</title>
-	<!--Hey! Dont snoop at my code-->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Mina:400,700" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 
+<div class="line"></div>
+
 	<div class="container">
 		
 		<div class="row heading">
-			<div class="col-md-12">
+			<div class="col-lg-12">
 				<h1>Snow Fangs Art Hub</h1>
 				<p>Please note this site is under construction, but my Commission Sheets are listed here for the time being. In the future the site will have funcionality which will allow you to start commission orders on the site but for now you will need to email me directly if you are interested in ordering a commission.</p>
 				<h2>SnowFangs.Digital@Gmail.com</h2> 
 			</div>
 		</div>
 
-		<div class="row contents">
+		<div class="row sheets">
 			<div class="col-md-4">
 				<!-- Headshots -->
 				<hr>
@@ -60,7 +71,7 @@
 		<div class="row footer">
 			<div class="col-md-12">
 				<p>
-				Copyright ©
+				Copyright © <!-- WAFFLES IS THE BEST DRAGGY -->
 				<script type="text/javascript">
 				var d = new Date()
 				document.write(d.getFullYear())
@@ -74,3 +85,4 @@
 
 </body>
 </html>
+<!-- END -->
