--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <head>
 	<title>Snow Fangs Art Hub</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Mina:400,700" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
