--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<div class="line"></div>
+	<div class="line"></div>
 
 	<div class="container">
 		
@@ -35,7 +35,7 @@
 			<div class="col-md-4">
 				<!-- Headshots -->
 				<hr>
-				<img src="https://i.imgur.com/BBpZCvG.jpg">
+				<img src="https://i.imgur.com/28mVE8o.jpg">
 				<div class="row"><a href="https://i.imgur.com/BBpZCvG.jpg" target="_blank"><div>Enlarge</div></a></div>
 			</div>
 			<div class="col-md-4">
@@ -54,15 +54,35 @@
 
 		<hr>
 
+		<!-- <div class="row extras">
+			<div class="col-md-4">
+				<h2>Free basic backgrounds</h2>
+				<img src="https://i.imgur.com/hxxiF5E.jpg">
+			</div>
+			<div class="col-md-4">
+				
+			</div>
+			<div class="col-md-4">
+				<h2>Adding Extra Characters</h2>
+				<img src="https://i.imgur.com/nEWahsS.jpg">
+			</div>
+		</div>
+
+		<hr> -->
+
 		<div class="row notice">
-			<div class="col-md-6 left">
+			<div class="col-md-4 left">
 				<h2>Need More Examples?</h2>
 				<ul>
 				<li><a href="https://snow-fangs.deviantart.com/" target="_blank">DeviantArt</a></li>
 				<li><a href="http://www.furaffinity.net/user/snowfangs/" target="_blank">Furaffinity</a></li>
 				</ul>
 			</div>
-			<div class="col-md-6 right">
+			<div class="col-md-4 mid">
+				<h2>Adding Extra Characters</h2>
+				<img src="https://i.imgur.com/xQMUOM9.jpg">
+			</div>
+			<div class="col-md-4 right">
 				<img src="https://i.imgur.com/Y2g7jLR.jpg">
 				<h2>Under Works</h2>
 				<p>Some images<br>still need to<br>be added.</p>	
