--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<div class="row footer">
 			<div class="col-md-12">
 				<p>
-				Copyright © <!-- WAFFLES IS THE BEST DRAGGY -->
+				Copyright © <!-- WAFFLES IS THE BEST DRAGGY! -->
 				<script type="text/javascript">
 				var d = new Date()
 				document.write(d.getFullYear())
