Added Extra Info

--- a/index.html
+++ b/index.html
@@ -54,35 +54,28 @@
 
 		<hr>
 
-		<!-- <div class="row extras">
-			<div class="col-md-4">
-				<h2>Free basic backgrounds</h2>
+		<div class="row extras">
+			<div class="col-md-6">
+				<h2>Free Basic Backgrounds</h2>
 				<img src="https://i.imgur.com/hxxiF5E.jpg">
 			</div>
-			<div class="col-md-4">
-				
-			</div>
-			<div class="col-md-4">
+			<div class="col-md-6">
 				<h2>Adding Extra Characters</h2>
-				<img src="https://i.imgur.com/nEWahsS.jpg">
+				<img src="https://i.imgur.com/xQMUOM9.jpg">
 			</div>
 		</div>
 
-		<hr> -->
+		<hr>
 
 		<div class="row notice">
-			<div class="col-md-4 left">
+			<div class="col-md-6 left">
 				<h2>Need More Examples?</h2>
 				<ul>
 				<li><a href="https://snow-fangs.deviantart.com/" target="_blank">DeviantArt</a></li>
 				<li><a href="http://www.furaffinity.net/user/snowfangs/" target="_blank">Furaffinity</a></li>
 				</ul>
 			</div>
-			<div class="col-md-4 mid">
-				<h2>Adding Extra Characters</h2>
-				<img src="https://i.imgur.com/xQMUOM9.jpg">
-			</div>
-			<div class="col-md-4 right">
+			<div class="col-md-6 right">
 				<img src="https://i.imgur.com/Y2g7jLR.jpg">
 				<h2>Under Works</h2>
 				<p>Some images<br>still need to<br>be added.</p>	
