Added Commission Status

--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
 			<div class="col-lg-12">
 				<h1>Snow Fangs Art Hub</h1>
 				<p>Please note this site is under construction, but my Commission Sheets are listed here for the time being. In the future the site will have funcionality which will allow you to start commission orders on the site but for now you will need to email me directly if you are interested in ordering a commission.</p>
-				<h2>SnowFangs.Digital@Gmail.com</h2> 
+				<h2>SnowFangs.Digital@Gmail.com</h2>
+						<div>Commissions: <span class="badge badge-success">Available</span></div>
+						<div>Queue Size: <span class="badge badge-warning">Moderate</span></div>
+				<!--
+				<span class="badge badge-info">Info</span>
+				<span class="badge badge-success">Success</span>
+				<span class="badge badge-danger">Danger</span>
+				<span class="badge badge-warning">Warning</span>
+				-->
 			</div>
 		</div>
 
@@ -73,6 +81,7 @@
 				<ul>
 				<li><a href="https://snow-fangs.deviantart.com/" target="_blank">DeviantArt</a></li>
 				<li><a href="http://www.furaffinity.net/user/snowfangs/" target="_blank">Furaffinity</a></li>
+				<li><a href="https://plus.google.com/+SnowFangs/" target="_blank">Google+</a></li>
 				</ul>
 			</div>
 			<div class="col-md-6 right">
